# argent

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  makefile  test.bat  vcpkg.json
assets/: basic.fs  basic.vs  buildHzb.csh  cull.csh  default.shader  gauss.mtl  grass.fs  grass.vs  screenQuad.vs  singleTex.fs  triangle.fs  triangle.vs
assets/brick/: brick.mat
assets/entities/: cliff.json  cube.json  l1.json  pillar.json  room.json
assets/sky/: atmosphere.fs  atmosphere.vs  generateLUT.csh  transmittanceLUT.csh
assets/sword/: sword.fbx
deprecated/assets/: basic.vs
deprecated/old/: TestFramework.cpp
deprecated/old/ecs/: EventManager_ITest.cpp
deprecated/old/resources/: Resources_ITest.cpp
deprecated/old/structures/: ordinal_set_UTest.cpp
deprecated/old/structures/core/: CVARs_UTest.cpp  Transform_UTest.cpp
deprecated/rendering/: CMakeLists.txt  Mesh.cpp  Renderer.cpp  Renderer.h  SceneBuilder.cpp  SceneBuilder.h
deprecated/rendering/lighting/: CMakeLists.txt  DirectionalLight.h  PointLight.h
deprecated/rendering/opengl/: GLScreen.cpp
deprecated/rendering/opengl/structures/: GLBuffer.cpp  GLBuffer.h  GLMaterial.cpp  GLTexture.cpp  GLTexture.h  GLVAO.cpp  GLVAO.h
src/: CMakeLists.txt  Main.cpp  engine.h
src/audio/: AudioSource.h
src/core/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.h  Engine.cpp  Engine.h  Grid.h  Input.cpp  Input.h  Stats.cpp  Stats.h  Transform.cpp  Transform.h  Utility.h
src/core/cvars/: CMakeLists.txt  CVAR.cpp  CVAR.h  CVARs.cpp  CVARs.h
src/core/log/: CMakeLists.txt  ConsoleWriter.h  Log.cpp  Log.h
src/core/spatial/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Grid.h
src/core/structures/: CMakeLists.txt  dependency_graph.h  functor.h  grid.h  ordinal_set.h  svector.cpp  svector.h  typelist.h
src/debug/log/: CMakeLists.txt  ConsoleWriter.h  Log.cpp  Log.h
src/ecs/: ArchetypeCollection.cpp  ArchetypeCollection.h  CMakeLists.txt  Component.cpp  Component.h  ECS.h  ECSTypes.h  Entity.cpp  Entity.h  EntityManager.h  EntityRef.h  EntityTemplate.h  Query.cpp  Query.h  QueryResult.h  System.cpp  System.h  World.cpp  World.h
src/ecs/archetypes/: CMakeLists.txt  archetype.cpp  archetype.h  colony_archetype.h  data_array.cpp  data_array.h  data_array_colony.h  data_array_factory.h
src/ecs/components/: component.h  component_set.h
src/ecs/entities/: entity.h
src/ecs/events/: CMakeLists.txt  Event.h  EventManager.h  EventQueue.h
src/ecs/world/: query.h  query_tree.h  system.h  system_scheduler.cpp  system_scheduler.h  world.h
src/engine/: ecs_thread.h  engine.h  game_thread.h  worker_thread.h
src/lib/: CMakeLists.txt  basic.h  bitmap.h  block_allocator.h  dyn_array.h  functor.h  job_graph.h  map.h  mt_list.h  pool_allocator.h  ptr.h  queue.h  read_file.cpp  read_file.h  set.h  string.h  sync.h  tuple.h  typelist.h  vector.h
src/lib/maths/: frustum.h
src/lib/mt/: mt_list.h  te_list.h
src/misc/: FuncUtils.h
src/rendering/: CMakeLists.txt  RenderEngine.h  Renderer.cpp  Renderer.h  SceneBuilder.cpp  SceneBuilder.h  SceneGraph.h  StaticRenderable.cpp  StaticRenderable.h  glm.h  main.cpp  mesh_handler.h  render_object.cpp  render_object.h  scene_builder.cpp  scene_builder.h  scene_graph.h  transform.cpp  transform.h  vertex.h
src/rendering/lighting/: CMakeLists.txt  PointLight.h
src/rendering/ogl/: CMakeLists.txt  atmosphere.h  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  grass.cpp  grass.h  material_allocator.h  opengl.cpp  opengl.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  window.cpp  window.h
src/rendering/ogl/structures/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  framebuffer.cpp  framebuffer.h  hierarchical_zbuffer.cpp  hierarchical_zbuffer.h  shader.cpp  shader.h  texture.cpp  texture.h  timer.cpp  timer.h  vao.cpp  vao.h
src/rendering/opengl/: Buffer.cpp  Buffer.h  CMakeLists.txt  GL.h  GLBuffer.cpp  GLBuffer.h  GLRenderEngine.cpp  GLRenderEngine.h  GLScreen.cpp  GLScreen.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVAO.h
src/rendering/opengl/structures/: CMakeLists.txt  GLBuffer.cpp  GLBuffer.h  GLMaterial.cpp  GLMaterial.h  GLMesh.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVAO.h
src/resources/: AssetManager.cpp  AssetManager.h  AudioClip.cpp  AudioClip.h  Blueprint.cpp  Blueprint.h  CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/resources/v2/: Resources.h  material.h  resrc_handle.h  resrc_manager.h  resrc_specifier.h
src/resources/v2/packer/: CMakeLists.txt  agpk.cpp  mesh.cpp  mesh.h  meshpk.cpp  meshpk.h  tex.cpp  tex.h
src/resources/v2/packer/mesh/: mesh.cpp  mesh.h  tangents.cpp  tangents.h
tests/: CMakeLists.txt  ConsoleWriter.h  NewTestFramework.cpp  NewTestFramework.h  TestFramework.cpp  TestFramework.h  TestTest.cpp  archetype_test.cpp  asset_test.cpp  blueprint_test.cpp  component_test.cpp  cvar_test.cpp  grid_test.cpp  system_test.cpp  test_framework.cpp  test_framework.h  transform_test.cpp  world_test.cpp
tests/assets/: cvars.json  entity.json  material.mat
tests/core/: CMakeLists.txt  CVARs_ITest.cpp  Grid_UTest.cpp  Transform_UTest.cpp
tests/core/structures/: CMakeLists.txt  grid_UTest.cpp  ordinal_set_UTest.cpp  svector_UTest.cpp
tests/ecs/: Archetype_UTest.cpp  CMakeLists.txt  Component_UTest.cpp  ECS_Mock.h  EntityRef_ITest.cpp  EventManager_ITest.cpp  System_UTest.cpp  World_ITest.cpp  archetype_UTest.cpp  new_archetype_UTest.cpp
tests/lib/: CMakeLists.txt  block_allocator_UTest.cpp  dyn_array_UTest.cpp  mt_list_UTest.cpp  ptr_UTest.cpp
tests/old/ecs/: World_ITest.cpp
tests/old/resources/: Mesh_ITest.cpp
tests/old/structures/: grid_UTest.cpp
tests/old/structures/core/: CMakeLists.txt
tests/resources/: Blueprint_ITest.cpp  CMakeLists.txt  Materials_ITest.cpp  Mesh_ITest.cpp  Resources_ITest.cpp  Texture_ITest.cpp
tests/resources/packer/: CMakeLists.txt  mesh_UTest.cpp
